Added few more sections of html part

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <span class="sectionTitleInner">story</span>
                 </h2>
                 <p>Lorem ipsum...</p>
-                <a href="#" class="btn" title="Read our story">Read more</a>
+                <a href="#" class="btn btn-outline" title="Read our story">Read more</a>
             </article><!-- Story -->
         </div><!-- END Container-->
 
@@ -357,6 +357,78 @@
 
     </section><!-- END Clients Reviews -->
 
+    <!-- Join Us -->
+    <section class="join">
+        <p class="joinText">
+            <a href="#" class="joinLink">Join</a> to <span class="joinTitle">Athletic club</span>
+        </p>
+    </section><!--END join-->
+
+    <!-- Contact -->
+    <section class="contact">
+        <div class="container">
+
+            <div class="contactText">
+                <p>Need help?</p>
+                <p>Ask a question?</p>
+            </div>
+
+            <div class="contactForm">
+                <h3>Get in touch by</h3>
+                <form action="">
+                    <input class="form-field" type="text" name="name" placeholder="Name">
+                    <input class="form-field" type="text" name="email" placeholder="E-mail">
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Enter Your Message"></textarea>
+                    <button class="btn" name="submit" value="submit">Get started now</button>
+                </form>
+            </div>
+        </div><!-- END Container -->
+    </section><!-- END Contact -->
     
+    <section class="gallery">
+        <!-- BUNCH OF IMAGES TO BE ADDED -->
+    </section>
+    <footer class="pageFooter">
+        <div class="container">
+
+            <ul class="footerSocial">
+                <li>
+                    <a href="#">
+                        <i>F</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i>T</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i>I</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i>I</i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i>I</i>
+                    </a>
+                </li>
+            </ul><!-- end footer social icons list -->
+
+            <p>Athletic club
+                <span>your fitness doctor</span>
+            </p>
+
+            <p><a href="#" title="Website address">www.example.com</a></p>
+
+            <p><a href="#" title="E-mail address">perakojot@example.com</a></p>
+
+            <p class="copy">AthleticClub&copy;2018-2019 All Rights Reserved | Terms of use and Privacy Policy</p>
+        </div><!-- END container -->
+    </footer><!-- END Page Footer-->
 </body>
 </html>
