Page Navigation completed, px in media queries changed in ems

--- a/index.html
+++ b/index.html
@@ -17,45 +17,47 @@
 <body>
     <!-- Page Header -->
     <header class="pageHeader">
+        <div class="container">
+            <!-- Page Main Navigation -->
+            <nav class="pageNav" id="mainMenu">
 
-        <!-- Page Main Navigation -->
-        <nav class="pageNav" id="mainMenu">
+                <div class="headerLogoOuter">
+                    <h1>
+                        <a href="index.html" title="Index page of website" class="headerLogoInner">Athletic club
+                            <span class="slogan">Your fitness doctor</span>
+                        </a>
+                    </h1>
+                </div><!-- Logo -->
 
-            <div class="headerLogoOuter">
-                <h1>
-                    <a href="index.html" title="Index page of website" class="headerLogoInner">Athletic club<br>
-                        <span class="slogan">Your fitness doctor</span>
-                    </a>
-                </h1>
-            </div><!-- Logo -->
+                <!-- Toggle Menu button -->
+                <button id="menuToggle" class="menuToggle">
+                    <span class="fas fa-bars"></span>
+                </button>
 
-            <!-- Toggle Menu button -->
-            <button id="menuToggle" class="menuToggle">
-                <span class="fas fa-bars"></span>
-            </button>
+                <!-- Dropdown for hide on mobile size -->
+                <div class="navDropdown">
+                    <ul class="navList">
+                        <li class="navItem">
+                            <a href="index.html" class="navLink" title="Index page of website">Home</a>
+                        </li>
+                        <li class="navItem">
+                            <a href="#" class="navLink" title="Our proffesional trainers">Trainers</a>
+                        </li>
+                        <li class="navItem">
+                            <a href="#" class="navLink" title="Features we provide">Features</a>
+                        </li>
+                        <li class="navItem">
+                            <a href="#" class="navLink" title="Who are we">About us</a>
+                        </li>
+                        <li class="navItem">
+                            <a href="#" class="navLink" title="Contact us">Contact</a>
+                        </li>
+                    </ul>
+                </div><!-- dropdown-->
 
-            <!-- Dropdown for hide on mobile size -->
-            <div class="navDropdown">
-                <ul class="navList">
-                    <li class="navItem">
-                        <a href="index.html" class="navLink" title="Index page of website">Home</a>
-                    </li>
-                    <li class="navItem">
-                        <a href="#" class="navLink" title="Our proffesional trainers">Trainers</a>
-                    </li>
-                    <li class="navItem">
-                        <a href="#" class="navLink" title="Features we provide">Features</a>
-                    </li>
-                    <li class="navItem">
-                        <a href="#" class="navLink" title="Who are we">About us</a>
-                    </li>
-                    <li class="navItem">
-                        <a href="#" class="navLink" title="Contact us">Contact</a>
-                    </li>
-                </ul>
-            </div><!-- dropdown-->
+            </nav><!-- END Navigation-->
 
-        </nav><!-- END Navigation-->
+        </div><!-- END Container -->
 
         <!-- Page Banner -->
         <div class="banner"></div><!-- END banner -->
