Gallery by new CSS Grid Property

--- a/index.html
+++ b/index.html
@@ -420,7 +420,12 @@
     </section><!-- END Contact -->
     
     <div class="gallery">
-        <!-- BUNCH OF IMAGES TO BE ADDED -->
+        <img src="https://via.placeholder.com/200" alt="Jonh Smith profile image" class="galleryImg">
+        <img src="https://via.placeholder.com/200" alt="Jonh Smith profile image" class="galleryImg">
+        <img src="https://via.placeholder.com/200" alt="Jonh Smith profile image" class="galleryImg">
+        <img src="https://via.placeholder.com/200" alt="Jonh Smith profile image" class="galleryImg">
+        <img src="https://via.placeholder.com/200" alt="Jonh Smith profile image" class="galleryImg">
+        <img src="https://via.placeholder.com/200" alt="Jonh Smith profile image" class="galleryImg">
     </div>
 
     <footer class="pageFooter">
