--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <!-- Page Main Navigation -->
                 <nav class="pageNav" id="mainMenu">
     
-                    <div class="headerLogoOuter">
+                    <div class="headerBrand">
                         <h1>
-                            <a href="index.html" title="Index page of website" class="headerLogoInner">Northshore athletic club
+                            <a href="index.html" title="Index page of website" class="brandInner">Northshore athletic club
                                 <span class="slogan">Your fitness doctor</span>
                             </a>
                         </h1>
@@ -433,43 +433,45 @@
 
             <ul class="footerSocial">
                 <li>
-                    <a href="#">
-                        <i>F</i>
+                    <a href="#" class="linkToSocial linkToSocialFacebook">
+                        <i class="fab fa-facebook-f"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i>T</i>
+                    <a href="#" class="linkToSocial ">
+                        <i class="fab fa-twitter"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i>I</i>
+                    <a href="#" class="linkToSocial ">
+                        <i class="fab fa-instagram"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i>I</i>
+                    <a href="#" class="linkToSocial ">
+                        <i class="fab fa-youtube"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i>I</i>
+                    <a href="#" class="linkToSocial ">
+                        <i class="fas fa-calendar-alt"></i>
                     </a>
                 </li>
             </ul><!-- end footer social icons list -->
 
             <div class="footerBrand">
-                <p>Athletic club
-                    <span>your fitness doctor</span>
+                <p class="brandInner">Northshore athletic club
+                    <span class="slogan">your fitness doctor</span>
                 </p>
             </div><!-- footer Brand -->
             
-            <p><a href="#" title="Website address">www.example.com</a></p>
+            <p><a href="#" title="Website address" class="footerLink"> <i class="fas fa-globe"></i> www.example.com</a></p>
 
-            <p><a href="#" title="E-mail address">perakojot@example.com</a></p>
+            <p><a href="#" title="E-mail address" class="footerLink"> <i class="fas fa-envelope"></i> perakojot@example.com</a></p>
 
-            <p class="copy">AthleticClub&copy;2018-2019 All Rights Reserved | Terms of use and Privacy Policy</p>
+            <hr>
+
+            <p class="copy">AthleticClub&copy; 2018-2019 <br>All Rights Reserved | Terms of use and Privacy Policy</p>
         </div><!-- END container -->
     </footer><!-- END Page Footer-->
 
