Work on basic Client Review

--- a/index.html
+++ b/index.html
@@ -321,92 +321,113 @@
         <div class="ourClientsReviewInner">
 
             <article class="clientReview">
-                <img src="#" alt="Marshal Smith Image" class="clientImg">
-                <div class="clientReviewText">
-                    <h3 class="clientName">Marshal Smith</h3>
+                <img src="https://via.placeholder.com/150x200" alt="Marshal Smith Image" class="clientReviewImg">
+                <div class="clientReviewBody">
+                    <h3 class="clientName">Michel Smith</h3>
 
-                    <!-- Client Review Social Icons -->
-                    <ul class="clientSocial">
+                    <!-- Client Review SocialIcons -->
+                    <ul class="clientSocial socialIcons">
                         <li>
                             <a href="#">
-                                <i>F</i>
+                                <i class="fab fa-facebook-f"></i>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <i>T</i>
+                                <i class="fab fa-twitter"></i>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <i>I</i>
+                                <i class="fab fa-instagram"></i>
                             </a>
                         </li>
                     </ul><!-- end client social icons list -->
                     <!-- Star Rating -->
-                    <ul class="clientSocial">
+                    <ul class="clientSocial starRating">
                         <li>
-                            <a href="#">&#9733;</a>
+                            <a href="#">
+                                <i class="fas fa-star"></i>
+                            </a>
                         </li>
                         <li>
-                            <a href="#">&#9733;</a>
+                            <a href="#">
+                                <i class="fas fa-star"></i>
+                            </a>
                         </li>
                         <li>
-                            <a href="#">&#9733;</a>
+                            <a href="#">
+                                <i class="fas fa-star"></i>
+                            </a>
                         </li>
                         <li>
-                            <a href="#">&#9733;</a>
+                            <a href="#">
+                                <i class="fas fa-star"></i>
+                            </a>
                         </li>
                         <li>
-                            <a href="#">&#9733;</a>
+                            <a href="#">
+                                <i class="fas fa-star"></i>
+                            </a>
                         </li>
                     </ul><!-- end star rating -->
-                    <p class="clientText">Lorem ipsum ></p>
+                    <p class="clientText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500.</p>
                 </div><!-- Client Review Text -->
             </article><!-- END Client Review-->
 
             <article class="clientReview">
-                <img src="#" alt="Marshal Smith Image" class="clientImg">
-                <div class="clientReviewText">
-                    <h3 class="clientName">Michael Smith</h3>
+                <img src="https://via.placeholder.com/150x200" alt="Marshal Smith Image" class="clientReviewImg">
+                <div class="clientReviewBody">
+                    <h3 class="clientName">Marshal Smith</h3>
 
                     <!-- Client Review Social Icons -->
-                    <ul class="clientSocial">
+                   <!-- Client Review SocialIcons -->
+                   <ul class="clientSocial socialIcons">
                         <li>
                             <a href="#">
-                                <i>F</i>
+                                <i class="fab fa-facebook-f"></i>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <i>T</i>
+                                <i class="fab fa-twitter"></i>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <i>I</i>
+                                <i class="fab fa-instagram"></i>
                             </a>
                         </li>
                     </ul><!-- end client social icons list -->
                     <!-- Star Rating -->
-                    <ul class="clientSocial">
+                    <ul class="clientSocial starRating">
                         <li>
-                            <a href="#">&#9733;</a>
+                            <a href="#">
+                                <i class="fas fa-star"></i>
+                            </a>
                         </li>
                         <li>
-                            <a href="#">&#9733;</a>
+                            <a href="#">
+                                <i class="fas fa-star"></i>
+                            </a>
                         </li>
                         <li>
-                            <a href="#">&#9733;</a>
+                            <a href="#">
+                                <i class="fas fa-star"></i>
+                            </a>
                         </li>
                         <li>
-                            <a href="#">&#9733;</a>
+                            <a href="#">
+                                <i class="fas fa-star"></i>
+                            </a>
                         </li>
                         <li>
-                            <a href="#">&#9733;</a>
+                            <a href="#">
+                                <i class="fas fa-star"></i>
+                            </a>
                         </li>
                     </ul><!-- end star rating -->
-                    <p class="clientText">Lorem ipsum</p>
+                    <p class="clientText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500.</p>
                 </div><!-- Client Review Text -->
             </article><!-- END Client Review-->
 
