Services on banner transfered only on medium and large devices

--- a/index.html
+++ b/index.html
@@ -62,11 +62,14 @@
             </div><!-- END Container -->
         </header><!-- END Page Header section -->
     
-        <!-- <div class="bannerText">
-            <h1 style="font-size:50px">I am John Doe</h1>
-            <p>And I'm a Photographer</p>
-            <button>Hire me</button>
-        </div> -->
+        <div class="bannerText">
+            <h2 class="sectionTitle">Our 
+                <br>
+                <span class="sectionTitleInner">services</span>
+                </h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            <a href="#" title="Features we provide">Read more</a>
+        </div>
 
     </div><!-- END banner -->
 
@@ -83,7 +86,7 @@
                 <div class="servicesText">
                     <h2 class="sectionTitle">Our services</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-                    <a href="#" class="readMore" title="Features we provide">Read more</a>
+                    <a href="#" title="Features we provide">Read more</a>
                 </div> <!-- services Text -->
                 <span class="whiteBorder left"></span>
                 <span class="whiteBorder right"></span>
