Services Icons section added

--- a/index.html
+++ b/index.html
@@ -73,8 +73,6 @@
 
     </div><!-- END banner -->
 
-    
-
     <!-- Services We Provide -->
     <section class="ourServices">
         <div class="container clearfix">
@@ -96,35 +94,44 @@
             <!-- Services Icons -->
             <div class="servicesIcons">
 
+
                 <!-- Single Services Icon - Yoga -->
-                <div class="servicesIconsSingle">
-                    <a href="#">
-                        <span class="fas fa-dumbbell"></span>
-                        <p class="servicesIconsText">Yoga</p>
+                <div class="serviceIconOuter">
+                    <a class="serviceIcon" href="#">
+                        <div class="serviceIconContent">
+                            <span class="fas fa-child"></span>
+                            <p class="servicesIconsText">Yoga</p>                        
+                        </div>
                     </a>
                 </div><!-- END Single Services Icon - Yoga -->
 
                 <!-- Single Services Icon - Weighting -->
-                <div class="servicesIconsSingle">
-                    <a href="#">
-                        <span class="fas fa-dumbbell"></span>
-                        <p class="servicesIconsText">Weighting</p>
+                <div class="serviceIconOuter">
+                    <a class="serviceIcon" href="#">
+                        <div class="serviceIconContent">
+                            <span class="fas fa-dumbbell"></span>
+                            <p class="servicesIconsText">Weighting</p>
+                        </div>
                     </a>
                 </div><!-- END Single Services Icon - Weighting -->
 
                 <!-- Single Services Icon - Martial Arts -->
-                <div class="servicesIconsSingle">
-                    <a href="#">
-                        <span class="fas fa-people-carry"></span>
-                        <p class="servicesIconsText">Martial Arts</p>
+                <div class="serviceIconOuter">
+                    <a class="serviceIcon" href="#">
+                        <div class="serviceIconContent">
+                            <span class="fas fa-people-carry"></span>
+                            <p class="servicesIconsText">Martial Arts</p>                      
+                        </div>
                     </a>
                 </div><!-- END Single Services Icon - Martial Arts -->
 
                 <!-- Single Services Icon - Barbell -->
-                <div class="servicesIconsSingle">
-                    <a href="#">
-                        <span class="fas fa-dumbbell"></span>
-                        <p class="servicesIconsText">Barbell</p>
+                <div class="serviceIconOuter">
+                    <a class="serviceIcon" href="#">
+                        <div class="serviceIconContent">
+                            <span class="fas fa-dumbbell"></span>
+                            <p class="servicesIconsText">Barbell</p>
+                        </div>
                     </a>
                 </div><!-- END Single Services Icon - Barbell -->      
 
