Trainers section added

--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
                 <!-- tile -->
                 <figure class="tile">
                     <img src="https://via.placeholder.com/330x350" alt="Jonh Smith profile image" class="tileImg">
+                    <div class="tileOverlay">
+                        <p class="overlayText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
                     <figcaption class="tileContent">
                         <ul class="tileSocial">
                             <li>
@@ -189,6 +192,9 @@
                 <!-- tile -->
                 <figure class="tile">
                     <img src="https://via.placeholder.com/330x350" alt="Adam Luis profile image" class="tileImg">
+                    <div class="tileOverlay">
+                        <p class="overlayText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
                     <figcaption class="tileContent">
                             <ul class="tileSocial">
                                 <li>
@@ -225,6 +231,9 @@
                 <!-- tile -->
                 <figure class="tile">
                     <img src="https://via.placeholder.com/330x350" alt="Maria Smith profile image" class="tileImg">
+                    <div class="tileOverlay">
+                        <p class="overlayText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                    </div>
                     <figcaption class="tileContent">
                             <ul class="tileSocial">
                                 <li>
