Story section added with diagonal background

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <span class="sectionTitleInner">services</span>
                 </h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-            <a href="#" title="Features we provide">Read more</a>
+            <a href="#" title="Features we provide" class="btn btnOutline">Read more</a>
         </div>
 
     </div><!-- END banner -->
@@ -277,14 +277,18 @@
     <div class="ourStory">
         <!-- Container-->
         <div class="container">
+            <div class="outStoryBg">
+
+            </div>
             <article class="story">
                 <h2 class="sectionTitle">Our 
                     <span class="sectionTitleInner">story</span>
                 </h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                 <p>An unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <a href="#" class="btn btn-outline" title="Read our story">Read more</a>
+                <a href="#" class="btn btnOutline" title="Read our story">Read more</a>
             </article><!-- Story -->
+
         </div><!-- END Container-->
     </div><!-- END Our Story -->
 
