Client Review section added, all work done

--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@
             <span class="sectionTitleInner">clients review</span>
         </h2>
 
-        <div class="container clientsReviewContainer">
+        <div class="container">
 
             <div class="ourClientsReviewInner">
                 <article class="clientReview">
-                    <img src="https://via.placeholder.com/150x200" alt="Marshal Smith Image" class="clientReviewImg">
+                    <div class="clientReviewImg"></div>
                     <div class="clientReviewBody">
                         <h3 class="clientName">Michel Smith</h3>
 
@@ -393,8 +393,7 @@
                     <div class="clientReviewBody">
                         <h3 class="clientName">Marshal Smith</h3>
 
-                        <!-- Client Review Social Icons -->
-                    <!-- Client Review SocialIcons -->
+                    <!-- Client Review Social Icons -->
                     <ul class="clientSocial socialIcons">
                             <li>
                                 <a href="#">
@@ -442,33 +441,11 @@
                         </ul><!-- end star rating -->
                         <p class="clientText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500.</p>
                     </div><!-- Client Review Body -->
-                    <img src="img/client2.jpg" alt="Marshal Smith Image" class="clientReviewImg">
+                    <div class="clientReviewImg"></div>
+
                 </article><!-- END Client Review-->
-            </div><!-- END our Clients Review Inner -->
-            
-            <div class="photoGrid">
-                <div class="photoGridItem hideOnSmall"></div>
-                <div class="photoGridItem hideOnSmall"></div>
-                <div class="photoGridItem photoGridItemOrange hideOnSmall"></div>
-                <div class="photoGridItem hideOnSmall"></div>
-                <div class="photoGridItem"></div>
-                <div class="photoGridItem photoGridItemImage"></div>
-                <div class="photoGridItem photoGridItemOrange"></div>
-                <div class="photoGridItem hideOnSmall"></div>
-                <div class="photoGridItem photoGridItemImage"></div>
-                <div class="photoGridItem"></div>
-                <div class="photoGridItem photoGridItemBlack"></div>
-                <div class="photoGridItem photoGridItemOrange hideOnSmall"></div>
-                <div class="photoGridItem"></div>
-                <div class="photoGridItem photoGridItemOrange"></div>
-                <div class="photoGridItem"></div>
-                <div class="photoGridItem photoGridItemBlack hideOnSmall"></div>
-                <div class="photoGridItem photoGridItemBlack"></div>
-                <div class="photoGridItem"></div>
-                <div class="photoGridItem photoGridItemImage"></div>
-                <div class="photoGridItem hideOnSmall"></div>
-            </div><!-- photo grid -->
-        </div><!-- END Clients Review Container-->
+         
+        </div><!-- END Container-->
     </section><!-- END Clients Reviews -->
 
     <!-- Join Us -->
